<?xml version="1.0"?>
<package>
  <name>handheld_device</name>
  <version>0.0.0</version>

  <description>
    Configuration and launch files for handheld device setup with USB camera and Livox MID360 LiDAR
  </description>

  <maintainer email="user@example.com">user</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>usb_cam</run_depend>
  <run_depend>livox_ros_driver2</run_depend>
  <run_depend>fast_livo</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>image_transport</run_depend>

  <export>
  </export>
</package>

